@@ -29,15 +29,9 @@ import java.util.List;
 import org.apache.geode.distributed.internal.deadlock.UnsafeThreadLocal;
 import org.apache.geode.internal.offheap.AddressableMemoryManager;
 import org.apache.geode.unsafe.internal.com.sun.jmx.remote.security.MBeanServerAccessController;
-import org.apache.geode.unsafe.internal.sun.nio.ch.DirectBuffer;
 
 public class MemberJvmOptions {
   static final int CMS_INITIAL_OCCUPANCY_FRACTION = 60;
-  /**
-   * export needed by {@link DirectBuffer}
-   */
-  private static final String SUN_NIO_CH_EXPORT =
-      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED";
   /**
    * export needed by {@link MBeanServerAccessController}
    */
